--- a/TM.RestHour/Views/Reports/Index.cshtml
+++ b/TM.RestHour/Views/Reports/Index.cshtml
@@ -322,6 +322,9 @@
                             <th class="tg-amwm" width="14%">Comments</th>
                             <th class="tg-amwm" width="3%">Minimum Rest in any 24 hours</th>
                             <th class="tg-amwm" width="3%">Minimum Rest in any 7 days</th>
+
+                            <th class="tg-amwm" width="3%">Comments</th>
+                            <th class="tg-amwm" width="3%">Approved</th>
                         </tr>
                         <tr id="1" filled="no">
                             <td class="tg-s4h7">01<sup><span class="super"></span></sup></td>
@@ -358,6 +361,9 @@
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
 
+                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
+                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
+
                         </tr>
                         <tr id="2" filled="no">
                             <td class="tg-s4h7">02<sup><span class="super"></span></sup></td>
@@ -393,6 +399,9 @@
                             <td class="tg-yw4l"></td>
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
+
+                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
+                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
                         </tr>
                         <tr id="3" filled="no">
                             <td class="tg-s4h7">03<sup><span class="super"></span></sup></td>
@@ -428,6 +437,9 @@
                             <td class="tg-yw4l"></td>
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
+
+                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
+                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
                         </tr>
                         <tr id="4" filled="no">
                             <td class="tg-s4h7">04<sup><span class="super"></span></sup></td>
@@ -463,6 +475,9 @@
                             <td class="tg-yw4l"></td>
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
+
+                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
+                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
                         </tr>
                         <tr id="5" filled="no">
                             <td class="tg-s4h7">05<sup><span class="super"></span></sup></td>
@@ -498,6 +513,9 @@
                             <td class="tg-yw4l"></td>
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
+
+                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
+                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
                         </tr>
                         <tr id="6" filled="no">
                             <td class="tg-s4h7">06<sup><span class="super"></span></sup></td>
@@ -533,6 +551,9 @@
                             <td class="tg-yw4l"></td>
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
+
+                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
+                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
                         </tr>
                         <tr id="7" filled="no">
                             <td class="tg-s4h7">07<sup><span class="super"></span></sup></td>
@@ -568,6 +589,9 @@
                             <td class="tg-yw4l"></td>
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
+
+                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
+                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
                         </tr>
                         <tr id="8" filled="no">
                             <td class="tg-s4h7">08<sup><span class="super"></span></sup></td>
@@ -603,6 +627,9 @@
                             <td class="tg-yw4l"></td>
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
+
+                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
+                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
                         </tr>
                         <tr id="9" filled="no">
                             <td class="tg-s4h7">09<sup><span class="super"></span></sup></td>
@@ -638,6 +665,9 @@
                             <td class="tg-yw4l"></td>
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
+
+                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
+                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
                         </tr>
                         <tr id="10" filled="no">
                             <td class="tg-s4h7">10<sup><span class="super"></span></sup></td>
@@ -674,6 +704,9 @@
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
 
+                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
+                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
+
                         </tr>
                         <tr id="11" filled="no">
                             <td class="tg-s4h7">11<sup><span class="super"></span></sup></td>
@@ -709,6 +742,9 @@
                             <td class="tg-yw4l"></td>
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
+
+                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
+                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
                         </tr>
                         <tr id="12" filled="no">
                             <td class="tg-s4h7">12<sup><span class="super"></span></sup></td>
@@ -744,6 +780,9 @@
                             <td class="tg-yw4l"></td>
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
+
+                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
+                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
                         </tr>
                         <tr id="13" filled="no">
                             <td class="tg-s4h7">13<sup><span class="super"></span></sup></td>
@@ -779,6 +818,9 @@
                             <td class="tg-yw4l"></td>
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
+
+                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
+                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
                         </tr>
                         <tr id="14" filled="no">
                             <td class="tg-s4h7">14<sup><span class="super"></span></sup></td>
@@ -814,6 +856,9 @@
                             <td class="tg-yw4l"></td>
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
+
+                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
+                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
                         </tr>
                         <tr id="15" filled="no">
                             <td class="tg-s4h7">15<sup><span class="super"></span></sup></td>
@@ -849,6 +894,9 @@
                             <td class="tg-yw4l"></td>
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
+
+                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
+                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
                         </tr>
                         <tr id="16" filled="no">
                             <td class="tg-s4h7">16<sup><span class="super"></span></sup></td>
@@ -884,6 +932,9 @@
                             <td class="tg-yw4l"></td>
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
+
+                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
+                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
                         </tr>
                         <tr id="17" filled="no">
                             <td class="tg-s4h7">17<sup><span class="super"></span></sup></td>
@@ -919,6 +970,9 @@
                             <td class="tg-yw4l"></td>
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
+
+                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
+                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
                         </tr>
                         <tr id="18" filled="no">
                             <td class="tg-s4h7">18<sup><span class="super"></span></sup></td>
@@ -954,6 +1008,9 @@
                             <td class="tg-yw4l"></td>
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
+
+                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
+                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
                         </tr>
                         <tr id="19" filled="no">
                             <td class="tg-s4h7">19<sup><span class="super"></span></sup></td>
@@ -989,6 +1046,9 @@
                             <td class="tg-yw4l"></td>
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
+
+                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
+                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
                         </tr>
                         <tr id="20" filled="no">
                             <td class="tg-s4h7">20<sup><span class="super"></span></sup></td>
@@ -1024,6 +1084,9 @@
                             <td class="tg-yw4l"></td>
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
+
+                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
+                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
                         </tr>
                         <tr id="21" filled="no">
                             <td class="tg-s4h7">21<sup><span class="super"></span></sup></td>
@@ -1059,6 +1122,9 @@
                             <td class="tg-yw4l"></td>
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
+
+                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
+                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
                         </tr>
                         <tr id="22" filled="no">
                             <td class="tg-s4h7">22<sup><span class="super"></span></sup></td>
@@ -1094,6 +1160,9 @@
                             <td class="tg-yw4l"></td>
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
+
+                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
+                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
                         </tr>
                         <tr id="23" filled="no">
                             <td class="tg-s4h7">23<sup><span class="super"></span></sup></td>
@@ -1129,6 +1198,9 @@
                             <td class="tg-yw4l"></td>
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
+
+                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
+                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
                         </tr>
                         <tr id="24" filled="no">
                             <td class="tg-s4h7">24<sup><span class="super"></span></sup></td>
@@ -1164,6 +1236,9 @@
                             <td class="tg-yw4l"></td>
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
+
+                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
+                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
                         </tr>
                         <tr id="25" filled="no">
                             <td class="tg-s4h7">25<sup><span class="super"></span></sup></td>
@@ -1199,6 +1274,9 @@
                             <td class="tg-yw4l"></td>
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
+
+                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
+                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
                         </tr>
                         <tr id="26" filled="no">
                             <td class="tg-s4h7">26<sup><span class="super"></span></sup></td>
@@ -1234,6 +1312,9 @@
                             <td class="tg-yw4l"></td>
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
+
+                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
+                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
                         </tr>
                         <tr id="27" filled="no">
                             <td class="tg-s4h7">27<sup><span class="super"></span></sup></td>
@@ -1269,6 +1350,9 @@
                             <td class="tg-yw4l"></td>
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
+
+                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
+                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
                         </tr>
                         <tr id="28" filled="no">
                             <td class="tg-s4h7">28<sup><span class="super"></span></sup></td>
@@ -1304,6 +1388,9 @@
                             <td class="tg-yw4l"></td>
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
+
+                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
+                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
                         </tr>
                         <tr id="29" filled="no">
                             <td class="tg-s4h7">29<sup><span class="super"></span></sup></td>
@@ -1339,6 +1426,9 @@
                             <td class="tg-yw4l"></td>
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
+
+                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
+                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
                         </tr>
                         <tr id="30" filled="no">
                             <td class="tg-s4h7">30<sup><span class="super"></span></sup></td>
@@ -1374,6 +1464,9 @@
                             <td class="tg-yw4l"></td>
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
+
+                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
+                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
                         </tr>
                         <tr id="31" filled="no">
                             <td class="tg-s4h7">31<sup><span class="super"></span></sup></td>
@@ -1409,6 +1502,9 @@
                             <td class="tg-yw4l"></td>
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
+
+                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
+                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
                         </tr>
                         <tr id="totals">
                             <td class="tg-s4h7" colspan="26"><b>Totals</b></td>
