--- a/TM.RestHour/Views/Reports/Index.cshtml
+++ b/TM.RestHour/Views/Reports/Index.cshtml
@@ -361,8 +361,8 @@
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
 
-                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
-                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
+                            <td class="tg-amwm"></textarea></td>
+                            <td class="tg-amwm"></td>
 
                         </tr>
                         <tr id="2" filled="no">
@@ -400,8 +400,8 @@
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
 
-                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
-                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
+                            <td class="tg-amwm"></td>
+                            <td class="tg-amwm"></td>
                         </tr>
                         <tr id="3" filled="no">
                             <td class="tg-s4h7">03<sup><span class="super"></span></sup></td>
@@ -438,8 +438,8 @@
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
 
-                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
-                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
+                            <td class="tg-amwm"></td>
+                            <td class="tg-amwm"></td>
                         </tr>
                         <tr id="4" filled="no">
                             <td class="tg-s4h7">04<sup><span class="super"></span></sup></td>
@@ -476,8 +476,8 @@
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
 
-                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
-                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
+                            <td class="tg-amwm"></td>
+                            <td class="tg-amwm"></td>
                         </tr>
                         <tr id="5" filled="no">
                             <td class="tg-s4h7">05<sup><span class="super"></span></sup></td>
@@ -514,8 +514,8 @@
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
 
-                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
-                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
+                            <td class="tg-amwm"></td>
+                            <td class="tg-amwm"></td>
                         </tr>
                         <tr id="6" filled="no">
                             <td class="tg-s4h7">06<sup><span class="super"></span></sup></td>
@@ -552,8 +552,8 @@
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
 
-                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
-                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
+                            <td class="tg-amwm"></td>
+                            <td class="tg-amwm"></td>
                         </tr>
                         <tr id="7" filled="no">
                             <td class="tg-s4h7">07<sup><span class="super"></span></sup></td>
@@ -590,8 +590,8 @@
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
 
-                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
-                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
+                            <td class="tg-amwm"></td>
+                            <td class="tg-amwm"></td>
                         </tr>
                         <tr id="8" filled="no">
                             <td class="tg-s4h7">08<sup><span class="super"></span></sup></td>
@@ -628,8 +628,8 @@
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
 
-                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
-                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
+                            <td class="tg-amwm"></td>
+                            <td class="tg-amwm"></td>
                         </tr>
                         <tr id="9" filled="no">
                             <td class="tg-s4h7">09<sup><span class="super"></span></sup></td>
@@ -666,8 +666,8 @@
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
 
-                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
-                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
+                            <td class="tg-amwm"></td>
+                            <td class="tg-amwm"></td>
                         </tr>
                         <tr id="10" filled="no">
                             <td class="tg-s4h7">10<sup><span class="super"></span></sup></td>
@@ -704,8 +704,8 @@
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
 
-                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
-                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
+                            <td class="tg-amwm"></td>
+                            <td class="tg-amwm"></td>
 
                         </tr>
                         <tr id="11" filled="no">
@@ -743,8 +743,8 @@
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
 
-                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
-                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
+                            <td class="tg-amwm"></td>
+                            <td class="tg-amwm"></td>
                         </tr>
                         <tr id="12" filled="no">
                             <td class="tg-s4h7">12<sup><span class="super"></span></sup></td>
@@ -781,8 +781,8 @@
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
 
-                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
-                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
+                            <td class="tg-amwm"></td>
+                            <td class="tg-amwm"></td>
                         </tr>
                         <tr id="13" filled="no">
                             <td class="tg-s4h7">13<sup><span class="super"></span></sup></td>
@@ -819,8 +819,8 @@
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
 
-                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
-                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
+                            <td class="tg-amwm"></td>
+                            <td class="tg-amwm"></td>
                         </tr>
                         <tr id="14" filled="no">
                             <td class="tg-s4h7">14<sup><span class="super"></span></sup></td>
@@ -857,8 +857,8 @@
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
 
-                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
-                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
+                            <td class="tg-amwm"></td>
+                            <td class="tg-amwm"></td>
                         </tr>
                         <tr id="15" filled="no">
                             <td class="tg-s4h7">15<sup><span class="super"></span></sup></td>
@@ -895,8 +895,8 @@
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
 
-                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
-                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
+                            <td class="tg-amwm"></td>
+                            <td class="tg-amwm"></td>
                         </tr>
                         <tr id="16" filled="no">
                             <td class="tg-s4h7">16<sup><span class="super"></span></sup></td>
@@ -933,8 +933,8 @@
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
 
-                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
-                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
+                            <td class="tg-amwm"></td>
+                            <td class="tg-amwm"></td>
                         </tr>
                         <tr id="17" filled="no">
                             <td class="tg-s4h7">17<sup><span class="super"></span></sup></td>
@@ -971,8 +971,8 @@
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
 
-                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
-                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
+                            <td class="tg-amwm"></td>
+                            <td class="tg-amwm"></td>
                         </tr>
                         <tr id="18" filled="no">
                             <td class="tg-s4h7">18<sup><span class="super"></span></sup></td>
@@ -1009,8 +1009,8 @@
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
 
-                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
-                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
+                            <td class="tg-amwm"></td>
+                            <td class="tg-amwm"></td>
                         </tr>
                         <tr id="19" filled="no">
                             <td class="tg-s4h7">19<sup><span class="super"></span></sup></td>
@@ -1047,8 +1047,8 @@
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
 
-                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
-                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
+                            <td class="tg-amwm"></td>
+                            <td class="tg-amwm"></td>
                         </tr>
                         <tr id="20" filled="no">
                             <td class="tg-s4h7">20<sup><span class="super"></span></sup></td>
@@ -1085,8 +1085,8 @@
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
 
-                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
-                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
+                            <td class="tg-amwm"></td>
+                            <td class="tg-amwm"></td>
                         </tr>
                         <tr id="21" filled="no">
                             <td class="tg-s4h7">21<sup><span class="super"></span></sup></td>
@@ -1123,8 +1123,8 @@
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
 
-                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
-                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
+                            <td class="tg-amwm"></td>
+                            <td class="tg-amwm"></td>
                         </tr>
                         <tr id="22" filled="no">
                             <td class="tg-s4h7">22<sup><span class="super"></span></sup></td>
@@ -1161,8 +1161,8 @@
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
 
-                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
-                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
+                            <td class="tg-amwm"></td>
+                            <td class="tg-amwm"></td>
                         </tr>
                         <tr id="23" filled="no">
                             <td class="tg-s4h7">23<sup><span class="super"></span></sup></td>
@@ -1199,8 +1199,8 @@
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
 
-                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
-                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
+                            <td class="tg-amwm"></td>
+                            <td class="tg-amwm"></td>
                         </tr>
                         <tr id="24" filled="no">
                             <td class="tg-s4h7">24<sup><span class="super"></span></sup></td>
@@ -1237,8 +1237,8 @@
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
 
-                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
-                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
+                            <td class="tg-amwm"></td>
+                            <td class="tg-amwm"></td>
                         </tr>
                         <tr id="25" filled="no">
                             <td class="tg-s4h7">25<sup><span class="super"></span></sup></td>
@@ -1275,8 +1275,8 @@
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
 
-                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
-                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
+                            <td class="tg-amwm"></td>
+                            <td class="tg-amwm"></td>
                         </tr>
                         <tr id="26" filled="no">
                             <td class="tg-s4h7">26<sup><span class="super"></span></sup></td>
@@ -1313,8 +1313,8 @@
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
 
-                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
-                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
+                            <td class="tg-amwm"></td>
+                            <td class="tg-amwm"></td>
                         </tr>
                         <tr id="27" filled="no">
                             <td class="tg-s4h7">27<sup><span class="super"></span></sup></td>
@@ -1351,8 +1351,8 @@
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
 
-                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
-                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
+                            <td class="tg-amwm"></td>
+                            <td class="tg-amwm"></td>
                         </tr>
                         <tr id="28" filled="no">
                             <td class="tg-s4h7">28<sup><span class="super"></span></sup></td>
@@ -1389,8 +1389,8 @@
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
 
-                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
-                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
+                            <td class="tg-amwm"></td>
+                            <td class="tg-amwm"></td>
                         </tr>
                         <tr id="29" filled="no">
                             <td class="tg-s4h7">29<sup><span class="super"></span></sup></td>
@@ -1427,8 +1427,8 @@
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
 
-                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
-                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
+                            <td class="tg-amwm"></td>
+                            <td class="tg-amwm"></td>
                         </tr>
                         <tr id="30" filled="no">
                             <td class="tg-s4h7">30<sup><span class="super"></span></sup></td>
@@ -1465,8 +1465,8 @@
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
 
-                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
-                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
+                            <td class="tg-amwm"></td>
+                            <td class="tg-amwm"></td>
                         </tr>
                         <tr id="31" filled="no">
                             <td class="tg-s4h7">31<sup><span class="super"></span></sup></td>
@@ -1503,8 +1503,8 @@
                             <td class="tg-amwm"></td>
                             <td class="tg-amwm"></td>
 
-                            <td class="tg-amwm"><textarea id="Comments" rows="4" cols="50"></textarea></td>
-                            <td class="tg-amwm"><input type="checkbox" id="Approved" /></td>
+                            <td class="tg-amwm"></td>
+                            <td class="tg-amwm"></td>
                         </tr>
                         <tr id="totals">
                             <td class="tg-s4h7" colspan="26"><b>Totals</b></td>
