--- a/TM.RestHour/Views/Regime/Index.cshtml
+++ b/TM.RestHour/Views/Regime/Index.cshtml
@@ -12,6 +12,7 @@
 @Html.Hidden("Tabadd3", @Url.Action("Add", "Regime"))
 @Html.Hidden("Tabadd7", @Url.Action("Add", "Regime"))
 @Html.Hidden("Tabadd4", @Url.Action("Add", "Regime"))
+@Html.Hidden("Tabadd5", @Url.Action("Add", "Regime"))
 
 
 
@@ -61,7 +62,7 @@
 
 
 
-                            <div class="">
+                            <div class="" style="">
 
 
 
@@ -74,8 +75,10 @@
                                                     <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">  <span>IMO STCW 2010</span></a></li>
                                                     <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">  <span>ILO Rest (MLC)</span></a></li>
                                                     <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab"> <span>ILO Work (MLC)</span></a></li>
-                                                    <li role="presentation"><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab"> <span>OCIMF</span></a></li>
-                                                    <li role="presentation"><a href="#extra" aria-controls="settings" role="tab" data-toggle="tab"> <span>Customised</span></a></li>
+                                                    <li role="presentation" style="width:90px;"><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab"> <span>OCIMF</span></a></li>
+                                                    <li role="presentation" style="width:115px;"><a href="#extra" aria-controls="settings" role="tab" data-toggle="tab"> <span>Customised</span></a></li>
+
+                                                    <li role="presentation" style="width:90px;"><a href="#opa90" aria-controls="settings" role="tab" data-toggle="tab"> <span>OPA-90</span></a></li>
                                                 </ul>
 
                                                 <!-- Tab panes -->
@@ -96,7 +99,7 @@
                                                             @*<input type="checkbox" name="opa" value="opa"> <label>Allow OPA 90 Clause</label>     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;      <button type="button" id="btnSave">OPA 90 Rule</button>*@
                                                             <div> &nbsp; </div>
                                                             @*<input type="checkbox" name="opa" value="opa"> <label>Allow Manila Exceptions</label>
-                                        <div> &nbsp; </div>*@
+                                                                <div> &nbsp; </div>*@
                                                             <button type="button" class="btn btn-link" style="padding:0;">@*Click here to see more information on the regimes*@</button>
                                                             <div> &nbsp; </div>
                                                             @*<input type="radio" name="RName" value="1" checked>IMO STCW 2010<br>*@
@@ -191,6 +194,26 @@
 
                                                         </div>
                                                     </div>
+
+                                                    <div role="tabpanel" class="tab-pane" id="opa90">
+                                                        <div class="col-md-12">
+                                                            <ul class="b">
+                                                                <li><label>Minimum continuous rest in any 24 hour period</label>  <input type="number" name="quantity" min="1" max="100" style="margin-left:94px;"></li>
+                                                                <li> <label>Minimum total rest in any 24 hour period</label> <input type="number" name="quantity" min="1" max="100" style="margin-left:132px;"></li>
+                                                                <li><label>Minimum hours rest in any  7 day period </label> <input type="number" name="quantity" min="1" max="100" style="margin-left:136px;"></li>
+                                                            </ul>
+
+
+                                                            @*<input type="checkbox" name="opa" value="opa"> <label>Allow OPA 90 Clause</label>     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;      <button type="button" id="btnSave">OPA 90 Rule</button>*@
+
+                                                            <br />
+                                                            <button type="button" class="btn btn-link" style="padding:0;">@*Click here to see more information on the regimes*@</button>
+                                                            <br />
+                                                            @*<input type="radio" name="RName" value="4" checked>Customised<br>*@
+                                                            <button type="button" align="center" class="button1 wi" id="btnAdd5" onclick="return AddTab5();">Set Default Regime</button>
+
+                                                        </div>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
@@ -198,7 +221,7 @@
                                 </div>
                                 <br />
                                 @*@if (Convert.ToBoolean(Session["XYZ "].ToString()))
-            {*@
+                                    {*@
 
                                 @*}*@
 
@@ -254,7 +277,7 @@
 
 
             DisableButton();
-            
+
 
 
 
