--- a/TM.RestHour/Views/Reports/Index.cshtml
+++ b/TM.RestHour/Views/Reports/Index.cshtml
@@ -277,7 +277,8 @@
                     ILO Rest @*^*@ &#9820; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     OCIMF @***@ &#9822; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     Customised @*$*@ &#9827; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    IMO STCW 2010 @*&*@ &#9829;
+                    IMO STCW 2010 @*&*@ &#9829;  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    OPA-90 @*!*@ &#9828;
                 </div>
 
 
