--- a/TM.RestHour/Views/MailServerDetails/Index.cshtml
+++ b/TM.RestHour/Views/MailServerDetails/Index.cshtml
@@ -94,6 +94,31 @@
 
                                         </div>
                                     </div>
+                                    @*///////////////////////////////////////////////////////////////////////////*@
+                                    <div class="col-md-3">
+                                        <div class="form-group">
+                                            <label for="Ship Email">Ship Email</label>
+                                            <input type="text" class="form-control" id="ShipEmail" placeholder="Ship Email" />
+                                        </div>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <div class="form-group">
+                                            <label for="Ship Email Password">Ship Email Password</label>
+                                            <input type="password" class="form-control" id="ShipEmailPassword" placeholder="Ship Email Password" />
+                                        </div>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <div class="form-group">
+                                            <label for="Admin Center Email">Admin Center Email</label>
+                                            <input type="text" class="form-control" id="AdminCenterEmail" placeholder="Admin Center Email" />
+                                        </div>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <div class="form-group">
+                                            <label for="POP3">POP3</label>
+                                            <input type="text" class="form-control" id="POP3" placeholder="POP3" />
+                                        </div>
+                                    </div>
                                 </div>
 
 
