--- a/TM.RestHour/Views/MailServerDetails/Index.cshtml
+++ b/TM.RestHour/Views/MailServerDetails/Index.cshtml
@@ -119,6 +119,12 @@
                                             <input type="text" class="form-control" id="POP3" placeholder="POP3" />
                                         </div>
                                     </div>
+                                    <div class="col-md-3">
+                                        <div class="form-group">
+                                            <label for="POP3 Port">POP3 Port</label>
+                                            <input type="text" class="form-control" id="POP3Port" placeholder="POP3 Port" />
+                                        </div>
+                                    </div>
                                 </div>
 
 
