--- a/TM.RestHour/Views/MailServerDetails/IndexIn.cshtml
+++ b/TM.RestHour/Views/MailServerDetails/IndexIn.cshtml
@@ -93,6 +93,38 @@
                                             @*<input type="password" class="form-control" id="ConfirmPassword" maxlength="10" placeholder="Confirm Password" style="width: 100%;" />*@
                                         </div>
                                     </div>
+
+                                    @*///////////////////////////////////////////////////////////////////////////*@
+                                    <div class="col-md-3">
+                                        <div class="form-group">
+                                            <label for="Ship Email">Ship Email</label>
+                                            <input type="text" class="form-control" id="ShipEmail" placeholder="Ship Email" />
+                                        </div>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <div class="form-group">
+                                            <label for="Ship Email Password">Ship Email Password</label>
+                                            <input type="password" class="form-control" id="ShipEmailPassword" placeholder="Ship Email Password" />
+                                        </div>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <div class="form-group">
+                                            <label for="Admin Center Email">Admin Center Email</label>
+                                            <input type="text" class="form-control" id="AdminCenterEmail" placeholder="Admin Center Email" />
+                                        </div>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <div class="form-group">
+                                            <label for="POP3">POP3</label>
+                                            <input type="text" class="form-control" id="POP3" placeholder="POP3" />
+                                        </div>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <div class="form-group">
+                                            <label for="POP3 Port">POP3 Port</label>
+                                            <input type="text" class="form-control" id="POP3Port" placeholder="POP3 Port" />
+                                        </div>
+                                    </div>
                                 </div>
 
 
