--- a/TM.RestHour/Views/Vessel/Index.cshtml
+++ b/TM.RestHour/Views/Vessel/Index.cshtml
@@ -56,26 +56,33 @@
 						</div>
 
 						<div class="col-md-12">
-							<div class="card">
-								<div class="col-md-4">
-									<div class="form-group">
-										<label for="Vessel">Vessel</label>
-										<input type="text" class="form-control" id="Vessel" placeholder="Vessel" disabled />
-									</div>
-								</div>
-								<div class="col-md-4">
-									<div class="form-group">
-										<label for=" Flag">Flag</label>
-										<input type="text" class="form-control" id="Flag" placeholder="Flag" disabled />
-									</div>
-								</div>
-								<div class="col-md-4">
-									<div class="form-group">
-										<label for="IMO Number">IMO Number</label>
-										<input type="text" class="form-control" id="IMONumber" placeholder="IMO Number" disabled />
-									</div>
-								</div>
-							</div>
+                            <div class="card">
+                                <div class="col-md-4">
+                                    <div class="form-group">
+                                        <label for="Vessel">Vessel</label>
+                                        <input type="text" class="form-control" id="Vessel" placeholder="Vessel" disabled />
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="form-group">
+                                        <label for=" Flag">Flag</label>
+                                        <input type="text" class="form-control" id="Flag" placeholder="Flag" disabled />
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="form-group">
+                                        <label for="IMO Number">IMO Number</label>
+                                        <input type="text" class="form-control" id="IMONumber" placeholder="IMO Number" disabled />
+                                    </div>
+                                </div>
+                                
+                                <div class="col-md-4">
+                                    <div class="form-group">
+                                        <label for="Ship Email">Ship Email</label>
+                                        <input type="text" class="form-control" id="ShipEmail" placeholder="Ship Email" disabled />
+                                    </div>
+                                </div>
+                            </div>
 						</div>
 
 						<div class="col-md-12">
@@ -108,26 +115,33 @@ else
 						</div>
 
 						<div class="col-md-12">
-							<div class="card">
-								<div class="col-md-4">
-									<div class="form-group">
-										<label for="Vessel">Vessel</label>
-										<input type="text" class="form-control" id="Vessel" placeholder="Vessel" disabled />
-									</div>
-								</div>
-								<div class="col-md-4">
-									<div class="form-group">
-										<label for=" Flag">Flag</label>
-										<input type="text" class="form-control" id="Flag" placeholder="Flag" disabled />
-									</div>
-								</div>
-								<div class="col-md-4">
-									<div class="form-group">
-										<label for="IMO Number">IMO Number</label>
-										<input type="text" class="form-control" id="IMONumber" placeholder="IMO Number" disabled />
-									</div>
-								</div>
-							</div>
+                            <div class="card">
+                                <div class="col-md-4">
+                                    <div class="form-group">
+                                        <label for="Vessel">Vessel</label>
+                                        <input type="text" class="form-control" id="Vessel" placeholder="Vessel" disabled />
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="form-group">
+                                        <label for=" Flag">Flag</label>
+                                        <input type="text" class="form-control" id="Flag" placeholder="Flag" disabled />
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="form-group">
+                                        <label for="IMO Number">IMO Number</label>
+                                        <input type="text" class="form-control" id="IMONumber" placeholder="IMO Number" disabled />
+                                    </div>
+                                </div>
+
+                                @*<div class="col-md-4">
+                                    <div class="form-group">
+                                        <label for="Ship Email">Ship Email</label>
+                                        <input type="text" class="form-control" id="ShipEmail" placeholder="Ship Email" disabled />
+                                    </div>
+                                </div>*@
+                            </div>
 						</div>
 
 					</form>
@@ -163,6 +177,13 @@ else
                                             <label for="IMO Number">IMO Number</label>
                                             <input type="text" class="form-control" id="IMONumber_edit" placeholder="IMO Number" />
                                         </div>
+
+                                        
+                                        <div class="form-group">
+                                            <label for="Ship Email">Ship Email</label>
+                                            <input type="text" class="form-control" id="ShipEmail_Edit" placeholder="Ship Email" />
+                                        </div>
+                                       
                                         <div class="form-group">
                                             <input type="hidden" id="ID" />
                                         </div>
